<resources>
    <string name="app_name">Image Ledger</string>
    <string name="fb_app_id">1191310330939467</string>
    <string name="title_activity_image_ledger_sign_up">Image_ledger_sign_up</string>
    <string name="ak_login_protocol_scheme">ak1191310330939467</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_image_ledger_sign_in">Image_ledger_sign_in</string>
    <string name="primary_password">Primary Password</string>
    <string name="secondary_password">Secondary Password</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="account_name_imp">Account Name</string>
    <string name="Initial_balance">Initial Account Balance</string>
    <string name="AddAccount_button_name">Add Account</string>
    <string name="cancel_button_imp">Cancel</string>
    <string name="title_activity_account_status">Account Status</string>
    <string name="action_settings">Settings</string>
    <string name="account_description">Acc. Description</string>
    <string name="title_activity_transaction__images__tabbed">Transaction Images</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">23888d12fab9b544f0ede75b9c0dfc11</string>
    <string name="mobile_login_button_text">MOBILE LOGIN</string>

</resources>
